--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,7 +32,7 @@ akka {
   #
   # And then uncomment this line to debug the configuration.
   #
-  #log-config-on-start = true
+  log-config-on-start = true
 }
 
 ## Secret key
@@ -41,7 +41,7 @@ akka {
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
 play.http.secret.key = ${APPLICATION_SECRET}
-//play.http.secret.key = "changeme"
+play.http.secret.key = "changeme"
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
@@ -102,7 +102,7 @@ play.filters {
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
   hosts {
-//      allowed = ["kussos-backend.herokuapp.com"]
+      allowed = ["boostupback.scalingo.io."]
       allowed = ["localhost:9000","localhost:3000"]
   }
   # Disabled filters remove elements from the enabled list.
