--- a/conf/application.conf
+++ b/conf/application.conf
@@ -103,7 +103,7 @@ play.filters {
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
   hosts {
-      allowed = ["boostupback.scalingo.io."]
+      allowed = ["https://boostupback.scalingo.io."]
       allowed = ["localhost:9000","localhost:3000"]
   }
   # Disabled filters remove elements from the enabled list.
@@ -322,7 +322,7 @@ play.filters {
   # This is useful to prevent cache poisoning attacks.
   hosts {
     # Allow requests to example.com, its subdomains, and localhost:9000.
-    allowed = ["localhost:9000","localhost:3000"]
+    allowed = ["localhost:9000","localhost:3000","https://boostupback.scalingo.io."]
   }
 }
 
