allowing all hosts to test

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -97,18 +97,6 @@ play.i18n {
 # Filters run code on every request. They can be used to perform
 # common logic for all your actions, e.g. adding common headers.
 #
-play.filters {
-
-  # Enabled filters are run automatically against Play.
-  # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
-  enabled += filters.ExampleFilter
-  hosts {
-      allowed = ["https://boostupback.scalingo.io."]
-      allowed = ["localhost:9000","localhost:3000"]
-  }
-  # Disabled filters remove elements from the enabled list.
-  #disabled += filters.ExampleFilter
-}
 
 ## Play HTTP settings
 # ~~~~~
@@ -322,7 +310,7 @@ play.filters {
   # This is useful to prevent cache poisoning attacks.
   hosts {
     # Allow requests to example.com, its subdomains, and localhost:9000.
-    allowed = ["localhost:9000","localhost:3000","https://boostupback.scalingo.io."]
+    allowed = ["."]
   }
 }
 
