--- a/conf/application.conf
+++ b/conf/application.conf
@@ -380,12 +380,12 @@ db {
 }
 
 slick.dbs.default.driver="slick.driver.PostgresDriver$"
-slick.dbs.defautl.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/kussos_trial"
-slick.dbs.default.db.user="postgres"
-slick.dbs.default.db.password="pH1L2feH3QyuL3$^la%gVbzGD&MLDojq"
-//slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
-//slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
+//slick.dbs.defautl.db.driver="org.postgresql.Driver"
+//slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/kussos_trial"
+//slick.dbs.default.db.user="postgres"
+//slick.dbs.default.db.password="pH1L2feH3QyuL3$^la%gVbzGD&MLDojq"
+slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
 
 #CSRF Token Filter Configuration
 play.filters.csrf.bypassCorsTrustedOrigins = true
