--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,6 +8,7 @@
 # You can include other configuration files in this main application.conf file:
 #include "extra-config.conf"
 #
+include "dev.conf"
 # You can declare variables and substitute for them:
 #mykey = ${some.value}
 #
@@ -16,67 +17,18 @@
 #mykey = ${JAVA_HOME}
 
 ## Akka
-# https://www.playframework.com/documentation/latest/ScalaAkka#Configuration
-# https://www.playframework.com/documentation/latest/JavaAkka#Configuration
-# ~~~~~
 # Play uses Akka internally and exposes Akka Streams and actors in Websockets and
 # other streaming HTTP responses.
 akka {
-  # "akka.log-config-on-start" is extraordinarly useful because it log the complete
-  # configuration at INFO level, including defaults and overrides, so it s worth
-  # putting at the very top.
-  #
-  # Put the following in your conf/logback.xml file:
-  #
-  # <logger name="akka.actor" level="INFO" />
-  #
-  # And then uncomment this line to debug the configuration.
-  #
-#  log-config-on-start = true
+  log-config-on-start = true
 }
 
 ## Secret key
-# http://www.playframework.com/documentation/latest/ApplicationSecret
-# ~~~~~
-# The secret key is used to sign Play's session cookie.
-# This must be changed for production, but we don't recommend you change it in this file.
 play.http.secret.key = "changeme"
 play.http.secret.key = ${?APPLICATION_SECRET}
 
-
-## Modules
-# https://www.playframework.com/documentation/latest/Modules
-# ~~~~~
-# Control which modules are loaded when Play starts.  Note that modules are
-# the replacement for "GlobalSettings", which are deprecated in 2.5.x.
-# Please see https://www.playframework.com/documentation/latest/GlobalSettings
-# for more information.
-#
-# You can also extend Play functionality by using one of the publically available
-# Play modules: https://playframework.com/documentation/latest/ModuleDirectory
-play.modules {
-  # By default, Play will load any class called Module that is defined
-  # in the root package (the "app" directory), or you can define them
-  # explicitly below.
-  # If there are any built-in modules that you want to disable, you can list them here.
-  #enabled += my.application.Module
-
-  # If there are any built-in modules that you want to disable, you can list them here.
-  #disabled += ""
-}
-
-## IDE
-# https://www.playframework.com/documentation/latest/IDE
-# ~~~~~
-# Depending on your IDE, you can add a hyperlink for errors that will jump you
-# directly to the code location in the IDE in dev mode. The following line makes
-# use of the IntelliJ IDEA REST interface:
-#play.editor="http://localhost:63342/api/file/?file=%s&line=%s"
-
 ## Internationalisation
-# https://www.playframework.com/documentation/latest/JavaI18N
-# https://www.playframework.com/documentation/latest/ScalaI18N
-# ~~~~~
+
 # Play comes with its own i18n settings, which allow the user's preferred language
 # to map through to internal messages, or allow the language to be stored in a cookie.
 play.i18n {
@@ -89,14 +41,6 @@ play.i18n {
   # Whether the HTTP only attribute of the cookie should be set to true
   #langCookieHttpOnly = true
 }
-
-## Filters
-# https://www.playframework.com/documentation/latest/ScalaHttpFilters
-# https://www.playframework.com/documentation/latest/JavaHttpFilters
-# ~~~~~
-# Filters run code on every request. They can be used to perform
-# common logic for all your actions, e.g. adding common headers.
-#
 
 ## Play HTTP settings
 # ~~~~~
@@ -162,18 +106,6 @@ play.http {
   }
 }
 
-## Netty Provider
-# https://www.playframework.com/documentation/latest/SettingsNetty
-# ~~~~~
-play.server.netty {
-  # Whether the Netty wire should be logged
-  #log.wire = true
-
-  # If you run Play on Linux, you can use Netty's native socket transport
-  # for higher performance with less garbage.
-  #transport = "native"
-}
-
 ## WS (HTTP Client)
 # https://www.playframework.com/documentation/latest/ScalaWS#Configuring-WS
 # ~~~~~
@@ -204,20 +136,6 @@ play.ws {
     #  ]
     #}
   }
-}
-
-## Cache
-# https://www.playframework.com/documentation/latest/JavaCache
-# https://www.playframework.com/documentation/latest/ScalaCache
-# ~~~~~
-# Play comes with an integrated cache API that can reduce the operational
-# overhead of repeated requests. You must enable this by adding to build.sbt:
-#
-# libraryDependencies += cache
-#
-play.cache {
-  # If you want to bind several caches, you can bind the individually
-  #bindCaches = ["db-cache", "user-cache", "session-cache"]
 }
 
 ## Filters
@@ -263,22 +181,6 @@ play.filters {
     # The allowed HTTP methods. If null, all methods are allowed
     allowedHttpMethods = null
     allowedHttpHeaders = null
-  }
-
-  ## CSRF Filter
-  # https://www.playframework.com/documentation/latest/ScalaCsrf#Applying-a-global-CSRF-filter
-  # https://www.playframework.com/documentation/latest/JavaCsrf#Applying-a-global-CSRF-filter
-  # ~~~~~
-  # Play supports multiple methods for verifying that a request is not a CSRF request.
-  # The primary mechanism is a CSRF token. This token gets placed either in the query string
-  # or body of every form submitted, and also gets placed in the users session.
-  # Play then verifies that both tokens are present and match.
-  csrf {
-    # Sets the cookie to be sent only over HTTPS
-    #cookie.secure = true
-
-    # Defaults to CSRFErrorHandler in the root package.
-    #errorHandler = MyCSRFErrorHandler
   }
 
   ## Security headers filter configuration
@@ -327,31 +229,6 @@ play.evolutions {
   db.default.enabled = true
 }
 
-## Database Connection Pool
-# https://www.playframework.com/documentation/latest/SettingsJDBC
-# ~~~~~
-# Play doesn't require a JDBC database to run, but you can easily enable one.
-#
-# libraryDependencies += jdbc
-#
-play.db {
-  # The combination of these two settings results in "db.default" as the
-  # default JDBC pool:
-  #config = "slick.dbs"
-  #default = "default"
-
-  # Play uses HikariCP as the default connection pool.  You can override
-  # settings by changing the prototype:
-  prototype {
-    # Sets a fixed JDBC connection pool size of 50
-    #hikaricp.minimumIdle = 50
-//    hikaricp.maximumPoolSize = 10
-//    hikaricp.connectionTimeout = 5 seconds
-//    hikaticp.maxLifetime = 10 seconds
-//    hikaticp.idleTimeout = 5 seconds
-  }
-}
-
 ## JDBC Datasource
 # https://www.playframework.com/documentation/latest/JavaDatabase
 # https://www.playframework.com/documentation/latest/ScalaDatabase
@@ -380,10 +257,6 @@ db {
 }
 
 slick.dbs.default.driver="slick.driver.PostgresDriver$"
-//slick.dbs.defautl.db.driver="org.postgresql.Driver"
-//slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/kussos_trial"
-//slick.dbs.default.db.user="postgres"
-//slick.dbs.default.db.password="pH1L2feH3QyuL3$^la%gVbzGD&MLDojq"
 slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
 slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
 
