figuring out how to choose between several databases

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -256,9 +256,9 @@ db {
   #default.logSql=true
 }
 
-slick.dbs.default.driver="slick.driver.PostgresDriver$"
-slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
-slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
+slick.dbs.prod.profile="slick.driver.PostgresDriver$"
+slick.dbs.prod.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+slick.dbs.prod.db.properties.driver = "org.postgresql.Driver"
 
 #CSRF Token Filter Configuration
 play.filters.csrf.bypassCorsTrustedOrigins = true
