--- a/conf/dev.conf
+++ b/conf/dev.conf
@@ -1,4 +1,4 @@
-slick.dbs.defautl.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/kussos_trial"
-slick.dbs.default.db.user="postgres"
-slick.dbs.default.db.password="pH1L2feH3QyuL3$^la%gVbzGD&MLDojq"
+slick.dbs.dev.db.driver="org.postgresql.Driver"
+slick.dbs.dev.db.url="jdbc:postgresql://localhost:5432/kussos_trial"
+slick.dbs.dev.db.user="postgres"
+slick.dbs.dev.db.password="pH1L2feH3QyuL3$^la%gVbzGD&MLDojq"
